# ucx-sisci

./: README.md  am_bw_short  am_bw_sisci  am_bw_zcopy  am_lat_zcopy
src/ucp/core/: ucp_context.c  ucp_request.inl
src/ucp/tag/: eager_rcv.c
src/uct/: Makefile.am
src/uct/base/: uct_iface.h
src/uct/sisci/: Makefile.am  sisci.c  sisci.h  sisci_ep.c  sisci_ep.h
src/uct/tcp/: tcp_md.c
